--- a/todo.css
+++ b/todo.css
@@ -29,7 +29,7 @@ hr{
     width: 1000px;
     border: 2px solid black;
     margin-bottom: 200px;
-    
+    background-color: rgba(0, 0, 255, 0.374);
 }
 
 #mood{
